initial FastAPI change via Github Copilot

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
+fastapi
 openai
 python-dotenv
 azure-cosmos==4.6.0  
-audio_recorder_streamlit
 papermill
-azure-identity
+unicorn
+pydantic
+pydantic-settings
