--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,10 +5,9 @@ AOAI_API_VERSION=2024-02-01
 AOAI_GPT4O_MINI_MODEL=
 TTS_MODEL_NAME=
 WHISPER_MODEL_NAME=
-# Bing Custom Search Service
-Bing_CUSTOM_SEARCH_API_ENDPOINT=https://api.bing.microsoft.com/v7.0/custom/search
-Bing_CUSTOM_SEARCH_API_KEY=
-BING_CUSTOM_CONFIG_ID=
+# Bing Search Service
+BING_SEARCH_API_ENDPOINT=https://api.bing.microsoft.com/v7.0/search
+BING_SEARCH_API_KEY=
 # Cosmos DB
 COSMOS_ENDPOINT=https://xxxxxxxxx.documents.azure.com:443/
 COSMOS_DATABASE=
